logs/Slang/generated/keywords/5.6.2--keyword_let.sv.log
name: let
description: The 'let' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_let.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_let.sv:8:8: error: expected declarator
    bit let;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_let.sv:8:9: error: language feature not yet supported
    bit let;
        ^~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_let.sv:8:12: error: expected identifier
    bit let;
           ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_let.sv:8:12: error: expected expression
    bit let;
           ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_let.sv:8:12: error: expected '='
    bit let;
           ^
